web-chat-be/webchat/src/main/java/com/example/webchat/respone/errors/SendMessErrors.java
package com.example.webchat.respone.errors;

import jakarta.validation.constraints.Min;
import jakarta.validation.constraints.NotBlank;
import jakarta.validation.constraints.NotNull;
import lombok.*;

@Setter
@Getter
@AllArgsConstructor
@NoArgsConstructor
@Builder
public class SendMessErrors {
    private String userId;
    private String chatId;
    private String content;
}
